# soramitsu-hunter

_data/projects/: crc32c.json  kagome.json  libp2p.json  spdlog.json  tsl_hat_trie.json
cmake/configs/: default.cmake
cmake/projects/Boost/: hunter.cmake
cmake/projects/abseil/: hunter.cmake
cmake/projects/absl/: hunter.cmake
cmake/projects/binaryen/: hunter.cmake
cmake/projects/crc32c/: hunter.cmake
cmake/projects/gRPC/: hunter.cmake
cmake/projects/jsonrpc-lean/: hunter.cmake
cmake/projects/kagome/: hunter.cmake
cmake/projects/libp2p/: hunter.cmake
cmake/projects/libsecp256k1/: hunter.cmake
cmake/projects/prometheus-cpp/: hunter.cmake
cmake/projects/schnorrkel_crust/: hunter.cmake
cmake/projects/soralog/: hunter.cmake
cmake/projects/spdlog/: hunter.cmake
cmake/projects/sr25519/: hunter.cmake
cmake/projects/tsl_hat_trie/: hunter.cmake
cmake/projects/wavm/: hunter.cmake
examples/kagome/: CMakeLists.txt  main.cpp
examples/wavm/: CMakeLists.txt  main.cpp
